# Wheel_Loader_Control

./: CMakeLists.txt  Readme.md  package.xml
config/: controllers.yaml  params.yaml  rviz.rviz
launch/: loader_sim.launch.py  loader_trajectory.launch.py
scripts/: kinematics_node.py  linkage_node.py  loader_feedback_node.py  simulate_force.py  state_generator.py  trajectory_generator.py
urdf/: L580.xacro  L580_end_link.xacro  L580_v2.xacro
world/: pile_world.world
